i did add something on the command

--- a/Ec2.yml
+++ b/Ec2.yml
@@ -8,6 +8,7 @@ Resources:
       ImageId:  ami-0c293f3f676ec4f90
       InstanceType: t2.micro 
       
+my name is bouba and i will get this done inshallah
 
 
      
